fix prev-next not visible on Safari; improve Carousel padding (not related to the issue)

--- a/blocks/prev-next/prev-next.css
+++ b/blocks/prev-next/prev-next.css
@@ -10,15 +10,17 @@
 .prev-next > div {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
-    grid-auto-rows: auto;
+    grid-auto-rows: min-content;
     align-items: center;
     justify-content: space-between;
-    width: 350px;
+    max-width: 350px;
+    width: 100%;
 }
+
 
 @media screen and (min-width: 767px) {
     .prev-next > div {
-        width: 900px;
+        max-width: 900px;
     }
 }
 
